--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "vue": "^3.0.0"
   },
   "devDependencies": {
-    "esbuild": "^0.23.1",
-    "typescript": "^5.6.2"
+    "esbuild": "^0.24.0",
+    "typescript": "^5.7.2"
   },
-  "packageManager": "pnpm@9.6.0+sha512.38dc6fba8dba35b39340b9700112c2fe1e12f10b17134715a4aa98ccf7bb035e76fd981cf0bb384dfa98f8d6af5481c2bef2f4266a24bfa20c34eb7147ce0b5e"
+  "packageManager": "pnpm@9.15.0"
 }
