--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   ],
   "exports": {
     ".": {
-      "import": "./dist/lib.js",
-      "types": "./dist/lib.d.ts"
+      "import": "./dist/useAsyncTask.js",
+      "types": "./dist/useAsyncTask.d.ts"
     }
   },
   "scripts": {
@@ -21,7 +21,7 @@
     "test:watch": "node --test --experimental-strip-types --watch",
     "build": "pnpm build:types && pnpm build:bundle",
     "build:types": "tsc",
-    "build:bundle": "esbuild src/lib.ts --bundle --minify --target=es2023 --format=esm --outdir=dist --sourcemap --external:vue",
+    "build:bundle": "esbuild src/useAsyncTask.ts --bundle --minify --target=es2023 --format=esm --outdir=dist --sourcemap --external:vue",
     "preversion": "pnpm test && pnpm build; git add dist/"
   },
   "peerDependencies": {
