chore: bump dependencies

--- a/package.json
+++ b/package.json
@@ -19,17 +19,16 @@
     "dev": "esbuild src/demo.js --bundle --minify --target=es2023 --format=esm --outdir=www --sourcemap --watch --servedir=.",
     "test": "node --test --experimental-strip-types",
     "test:watch": "node --test --experimental-strip-types --watch",
-    "build": "pnpm build:types && pnpm build:bundle",
+    "build": "node --run build:types && node --run build:bundle",
     "build:types": "tsc",
     "build:bundle": "esbuild src/useAsyncTask.ts --bundle --minify --target=es2023 --format=esm --outdir=dist --sourcemap --external:vue",
-    "preversion": "pnpm test && pnpm build; git add dist/"
+    "preversion": "node --run test && node --run build; git add dist/"
   },
   "peerDependencies": {
     "vue": "^3.0.0"
   },
   "devDependencies": {
-    "esbuild": "^0.24.0",
-    "typescript": "^5.7.2"
-  },
-  "packageManager": "pnpm@9.15.0"
+    "esbuild": "^0.25.0",
+    "typescript": "^5.7.3"
+  }
 }
