--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     }
   },
   "scripts": {
-    "dev": "esbuild src/demo.js --bundle --minify --target=es2023 --format=esm --outdir=www --sourcemap --watch --servedir=.",
-    "test": "node --test --experimental-strip-types",
-    "test:watch": "node --test --experimental-strip-types --watch",
+    "dev": "esbuild src/demo.js --bundle --format=esm --outdir=www --watch --servedir=.",
+    "test": "node --test",
+    "test:watch": "node --test --watch",
     "build": "node --run build:types && node --run build:bundle",
     "build:types": "tsc",
-    "build:bundle": "esbuild src/useAsyncTask.ts --bundle --minify --target=es2023 --format=esm --outdir=dist --sourcemap --external:vue",
-    "preversion": "node --run test && node --run build; git add dist/"
+    "build:bundle": "esbuild src/useAsyncTask.ts --bundle --format=esm --outdir=dist --external:vue",
+    "preversion": "node --run test && node --run build; git add dist/",
+    "typecheck": "tsc --noEmit"
   },
   "peerDependencies": {
     "vue": "^3.0.0"
