--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,10 +8,9 @@
     "lib": ["es2024", "DOM"],
     "module": "nodenext",
     "moduleResolution": "nodenext",
-    "outDir": "dist",
     "skipLibCheck": true,
     "target": "es2024"
   },
-  "include": ["src/**/*.js", "src/**/*.ts"],
-  "exclude": ["src/**/*.spec.*", "src/**/*.test.*", "src/demo.js"]
+  "include": ["**/*.js", "**/*.ts"],
+  "exclude": ["**/*.spec.*", "**/*.test.*"]
 }
